CAY-2126 Modeler cannot upgrade project from v7 to v9
CAY-2128 Modeler stored procedures are not imported
CAY-2131 Modeler NullPointerException in reverse engineering when importing different catalogs in one datamap
CAY-2138 NVARCHAR, LONGNVARCHAR and NCLOB types are missing from Firebird types.xml
CAY-2143 NPE in BaseSchemaUpdateStrategy

----------------------------------
Release: 4.0.M3
Date:
----------------------------------
Changes/New Features:

CAY-1626 Add JodaTime DateTime support
CAY-1902 Implement resolving Db paths for DataObjects
CAY-1991 More control over generated String property names
CAY-1992 Allow to exclude DataMap java class from Modeler class generation
CAY-1995 Add support for iterators to Select
CAY-2001 Saving a display state of Project
CAY-2004 EJBQL: Support for ordering on aggregate expressions
CAY-2007 Refactoring SelectTranslator for better extensibility
CAY-2008 Connection pool refactoring and validation query support in Cayenne DataSource
CAY-2009 Non-blocking connection pool
CAY-2010 DataSourceBuilder to help users create pooling and non-pooling DataSources
CAY-2011 Support for Java 8 date and time types
CAY-2012 ObjectSelect, SelectById: eliminating methods that reset query state
CAY-2013 In-memory evaluation of DB expressions - non-id attributes
CAY-2023 Decouple the use of ResourceLocator
CAY-2025 Support for DBCP2
CAY-2026 Java 7
CAY-2027 Support for Expression outer join syntax in EJBQL
CAY-2028 Wrap DataChannelFilter calls in the main transaction
CAY-2029 Allow out-of-order insertion into DI lists
CAY-2030 Capturing a stream of commit changes
CAY-2035 Autobind items added to collections (Cayenne DI)
CAY-2042 Remove an arbitrary limitation on 1000 runtime DbRelationships
CAY-2043 ServerRuntimeBuilder: use DataDomain name for the default DataNode
CAY-2044 Collection setter for to-many relationships
CAY-2045 Add autosuggestion fields to choose attributes and relationships

Bug Fixes:
