@@ -655,39 +655,37 @@ public class CayenneDataObject extends PersistentObject implements DataObject, V
 		// validate mandatory relationships
 		for (final ObjRelationship relationship : objEntity.getRelationships()) {
 
-			if (relationship.isSourceIndependentFromTargetChange()) {
-				continue;
-			}
-
 			List<DbRelationship> dbRels = relationship.getDbRelationships();
 			if (dbRels.isEmpty()) {
 				continue;
 			}
 
+			// skip db relationships that we can't validate or that can't be invalid here
+			// can't handle paths longer than two db relationships
+			// see ObjRelationship.recalculateReadOnlyValue() for more info
+			if (dbRels.size() == 1 && relationship.isSourceIndependentFromTargetChange() ||
+					dbRels.size() > 1 && (relationship.isToMany() || relationship.isReadOnly())) {
+				continue;
+			}
+
 			// if db relationship is not based on a PK and is based on mandatory
 			// attributes, see if we have a target object set
+			// relationship will be validated only if all db path has mandatory
+			// db relationships
 			boolean validate = true;
-			DbRelationship dbRelationship = dbRels.get(0);
-			for (DbJoin join : dbRelationship.getJoins()) {
-				DbAttribute source = join.getSource();
-
-				if (source.isMandatory()) {
-					// clear attribute failures...
-					if (failedDbAttributes != null && !failedDbAttributes.isEmpty()) {
-						failedDbAttributes.remove(source.getName());
-
-						// loop through all joins if there were previous
-						// mandatory
-
-						// attribute failures....
-						if (!failedDbAttributes.isEmpty()) {
-							continue;
+			for (DbRelationship dbRelationship : dbRels) {
+				for (DbJoin join : dbRelationship.getJoins()) {
+					DbAttribute source = join.getSource();
+					if (source.isMandatory()) {
+						// clear attribute failures...
+						if (failedDbAttributes != null && !failedDbAttributes.isEmpty()) {
+							failedDbAttributes.remove(source.getName());
 						}
+					} else {
+						// do not validate if the relation is based on
+						// multiple keys with some that can be nullable.
+						validate = false;
 					}
-				} else {
-					// do not validate if the relation is based on
-					// multiple keys with some that can be nullable.
-					validate = false;
 				}
 			}
 
