@@ -1,0 +1,30 @@
+package org.apache.cayenne.testdo.inheritance_vertical.auto;
+
+import org.apache.cayenne.exp.Property;
+import org.apache.cayenne.testdo.inheritance_vertical.IvRoot;
+
+/**
+ * Class _IvSub3 was generated by Cayenne.
+ * It is probably a good idea to avoid changing this class manually,
+ * since it may be overwritten next time code is regenerated.
+ * If you need to make any customizations, please use subclass.
+ */
+public abstract class _IvSub3 extends IvRoot {
+
+    private static final long serialVersionUID = 1L; 
+
+    public static final String ID_PK_COLUMN = "ID";
+
+    public static final Property<IvRoot> IV_ROOT = new Property<IvRoot>("ivRoot");
+
+    public void setIvRoot(IvRoot ivRoot) {
+        setToOneTarget("ivRoot", ivRoot, true);
+    }
+
+    public IvRoot getIvRoot() {
+        return (IvRoot)readProperty("ivRoot");
+    }
+
+    protected abstract void onPrePersist();
+
+}
